[package]
name = "graphene_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
graphene_core = { path = "../crates/graphene_core" }
graphene_style = { path = "../crates/graphene_style" }
graphene_algo = { path = "../crates/graphene_algo" }
graphene_layout = { path = "../crates/graphene_layout" }
graphene_gpui = { path = "../crates/graphene_gpui" }
gpui = "0.2"
gpui-component = "0.5.1"

